--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 📁 GitHub Repository
             </a>
 
-            <a class="btn secondary" href="https://roladaghash1-sudo.github.io/WEB_CLIENT_PROJECT/" target="_blank">
+            <a class="btn secondary" href="https://roladaghash1-sudo.github.io/WEB_CLIENT_PROJECT/">
                 🌐 Live Website (GitHub Pages)
             </a>
 
