--- a/index.html
+++ b/index.html
@@ -88,19 +88,24 @@
         </div>
 
         <div class="links">
-            <a class="btn" href="https://github.com/roladaghash1-sudo/WEB_CLIENT_PROJECT" target="_blank">
+            <!-- GitHub -->
+            <a class="btn" href="https://github.com/roladaghash1-sudo/WEB_CLIENT_PROJECT" target="_blank"
+                rel="noopener">
                 📁 GitHub Repository
             </a>
 
-            <a class="btn secondary" href="./login.html">
-                🌐 Start App (Login)
+            <!-- Live -->
+            <a class="btn secondary" href="https://roladaghash1-sudo.github.io/WEB_CLIENT_PROJECT/" target="_blank"
+                rel="noopener">
+                🌐 Live Website (GitHub Pages)
             </a>
 
-
+            <!-- Start App -->
             <a class="btn secondary" href="./login.html">
-                🔐 Login / Register
+                ▶ Start App (Login)
             </a>
         </div>
+
     </div>
 </body>
 
